--- a/package.json
+++ b/package.json
@@ -1,36 +1,27 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
+  "name": "clientfacing",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "homepage": "https://thedigitallicious.online/",
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@material-ui/core": "^4.12.4",
-    "@mui-treasury/components": "^1.10.1",
-    "@mui-treasury/styles": "^1.13.1",
-    "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.9",
-    "@mui/styled-engine-sc": "^5.10.6",
-    "@mui/styles": "^5.10.9",
-    "@reduxjs/toolkit": "^1.9.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "amazon-cognito-identity-js": "^5.2.11",
-    "axios": "^1.1.3",
-    "color": "^4.2.3",
-    "dotenv": "^16.0.3",
+    "@babel/plugin-transform-runtime": "^7.21.4",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.0",
+    "@mui/styles": "^5.12.0",
+    "@reduxjs/toolkit": "^1.9.3",
+    "amazon-cognito-identity-js": "^6.2.0",
+    "axios": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-font-loader": "^1.1.0",
-    "react-hook-form": "^7.37.0",
+    "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^9.0.8",
-    "redux-saga": "^1.2.1",
-    "styled-components": "^5.3.6",
-    "web-vitals": "^3.0.3"
+    "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.2",
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,11 +29,26 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "dotenv-webpack": "^8.0.1",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.1",
+    "mini-css-extract-plugin": "^2.7.5",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "style-loader": "^3.3.2",
+    "terser-webpack-plugin": "^5.3.7",
+    "web-vitals": "^3.3.1",
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2",
+    "webpack-dev-server": "^4.13.3"
   },
   "browserslist": {
     "production": [
