--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "homepage": "https://thedigitallicious.online/",
+  "proxy": "http://localhost:7700/",
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.21.4",
     "@emotion/react": "^11.10.6",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3"
   },
   "scripts": {
